# dipt-quic-schc

./: .gitmodules  Cargo.toml  readme.md
.github/workflows/: test.yml
golden-tests/: Cargo.toml
golden-tests/src/: main.rs
golden-tests/tests/fullmars/: expected-replay-log.tokio  expected-stdout.tokio
golden-tests/tests/fullmars-big-payload/: expected-stdout.tokio
golden-tests/tests/quic-schc-mars/: args  expected-replay-log.tokio  expected-stdout.tokio
golden-tests/tests/quic-schc-moon/: args  expected-replay-log.tokio  expected-stdout.tokio
in-memory-network/: Cargo.toml
in-memory-network/src/: lib.rs  quinn_interop.rs  transmit.rs
in-memory-network/src/network/: link.rs  mod.rs  node.rs
in-memory-network/src/tracing/: simulation_verifier.rs
quinn-workbench/: Cargo.toml
quinn-workbench/src/config/: cli.rs
quinn-workbench/src/quic/: client.rs  mod.rs  schc_transport.rs  server.rs  simulation.rs
quinn-workbench/src/quic/schc_transport/: coreconf.rs  learning.rs  learning_extract.rs  learning_rules.rs  packet.rs  socket.rs  stats.rs  types.rs
test-data/schc/: quic_rules.json  quic_rules.sor
